--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 		<script type="text/javascript" src="scripts/controllers/gameController.js"></script>
 		<script type="text/javascript" src="scripts/models/gameModel.js"></script>
 		<script type="text/javascript" src="scripts/services/gameService.js"></script>
+		<script src="openLayers.js"></script>
 	</body>
 </html>
