--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 		<script type="text/javascript" src="scripts/app.js"></script>
 		<script type="text/javascript" src="scripts/controllers/gameController.js"></script>
 		<script type="text/javascript" src="scripts/models/gameModel.js"></script>
+		<script type="text/javascript" src="scripts/models/gameAlgorithms.js"></script>
 		<script type="text/javascript" src="scripts/services/gameService.js"></script>
 		<script type="text/javascript" src="scripts/canvas/game.js"></script>
+		<script> 
+			
+		
+		</script>
 		<!-- <script src="openLayers.js"></script> -->
 	</body>
 </html>
